# astroNN

./: .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  index.html  pyproject.toml  requirements-dev.txt  requirements-tensorflow.txt  requirements-torch.txt  requirements.txt  setup.py  travis_tf_1_12_patch.py
astroNN/: __init__.py  config.py  requirements.txt
astroNN/NN/: test.py  (+11 more)
doc/: .buildinfo  astroNN.NNgalaxy.html  astroNN.apogee.html  astroNN.datasets.html  astroNN.gaia.html  index.html  objects.inv  search.html  searchindex.js
docs/: .buildinfo  Makefile  Uncertainty_Demo_quad.html  acknowledgments.html  astroNN.NN.html  astroNN.apogee.html  astroNN.datasets.html  astroNN.gaia.html  astroNN.html  astroNN.models.html  compile_datasets.html  genindex.html  history.html  index.html  index_2.html  known_issues.html  make.bat  modules.html  neural_network.html  objects.inv  py-modindex.html  quick_start.html  requirements.txt  search.html  searchindex.js  tools_apogee.html  tools_gaia.html  vae_demo.html
test/: apogee_model_test.py  gaia_tools_test.py  layers_test.py  loss_func_test.py
tests/: config.ini  conftest.py  test_apogee_downloader.py  test_apogee_model.py  test_apogee_tools.py  test_datasets.py  test_gaia_tools.py  test_lamost_tools.py  test_layers.py  test_loss_func.py  test_mnist_models.py  test_models.py  test_neuralODE.py  test_numpy_tools.py  test_paper_models.py  test_utilities.py  travis_tf_1_12.py
(+280 files in other folders)
